--- a/farm-to-table/index.html
+++ b/farm-to-table/index.html
@@ -12,6 +12,24 @@
     <script src="https://kit.fontawesome.com/4d99540586.js" crossorigin="anonymous"></script>
 </head>
 <body>
- <!--Start writing your HTML here-->
+ <header>
+     <nav>
+         <div class="logo">
+
+         </div>
+         <div class="links">
+             <a href="#">Home</a>
+             <a href="#">Farm Fresh</a>
+             <a href="#">About</a>
+             <a href="#">Farm Fresh</a>
+         </div>
+     </nav>
+ </header>
+ <section class="top">
+     <div class="titles">
+        <i class="far fa-farm"></i>
+
+     </div>
+ </section>
 </body>
 </html>
