--- a/farm-to-table/index.html
+++ b/farm-to-table/index.html
@@ -18,18 +18,45 @@
 
          </div>
          <div class="links">
-             <a href="#">Home</a>
-             <a href="#">Farm Fresh</a>
+             <a href="#top">Home</a>
+             <a href="#farm">Farm Fresh</a>
              <a href="#">About</a>
-             <a href="#">Farm Fresh</a>
+             <a href="#">Contact</a>
          </div>
      </nav>
  </header>
- <section class="top">
+ <section id="top">
      <div class="titles">
         <i class="far fa-farm"></i>
-
+        <h1>Farm to Table</h1>
+        <h2>Ethical ETC</h2>
      </div>
  </section>
+
+ <section id="farm"></section>
+ <h2>Farm Fresh</h2>
+ <div class="container">
+     <div class="box">
+         <i class="far fa-cow"></i>
+<h3>Diary</h3>
+     </div>
+     <div class="box">
+        <i class="far fa-cow"></i>
+        <h3>Eggs</h3>
+             </div>
+             <div class="box">
+                <i class="far fa-cow"></i>
+                <h3>Produce</h3>
+                     </div>
+                     <div class="box">
+                        <i class="far fa-cow"></i>
+                        <h3>Bakery</h3>
+                             </div>
+                             </div>
+                            </section>
+
+    <section class="hero-image">
+
+    </section>
 </body>
 </html>
