--- a/farm-to-table/index.html
+++ b/farm-to-table/index.html
@@ -112,5 +112,29 @@
             </div>
         </div>
     </section>
+
+    <footer>
+        <div>
+<h2>Connect with us on socials</h2>
+    <nav>
+        <a href="IG" target="_blank"></a>
+        <a href="FB" target="_blank"></a>
+        <a href="Twitter" target="_blank">/*insert social icons here*/</a>
+    </nav>
+</h2>
+        </div>
+        <div>
+
+<nav class="main">
+        <a href="#top">Home</a>
+        <a href="#farm">Farm Fresh</a>
+        <a href="about">About</a>
+        <a href="contact">Contact</a>
+</nav>
+        </div>
+        <div>
+<p>Copyright etc.</p>
+        </div>
+    </footer>
 </body>
 </html>
